# htmlpacker

./: .gitignore  1  Cargo.toml  README.md  gemini.md  htmlpacker .gitignore  htmlpacker test.yaml  old.txt  paleomap3d.yaml
htmlpacker/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  config.yaml  paleomap3d.yaml  test.yaml
htmlpacker/core/: app.js  core.js  decoder.js  loading.js
htmlpacker/src/: cli.rs  config.rs  encoder.rs  fetcher.rs  html.rs  htmlpacker.rs  lib.rs  packer.rs  wasmbuilder.rs
public/: app.js  app2.js  decoder.js  decoder2.js  loading.js  old.js  script.js  wasm_test.wasm
src/: encoder.rs  htmlpacker.rs  main.rs
wasm_decoder/: Cargo.toml
wasm_modules/: Cargo.toml  old.txt  trackball_camera.txt
wasm_modules/.cargo/: config.toml
wasm_modules/assets/shaders/: instancing.wgsl  test.wgsl
wasm_modules/src/: camera.rs  dom.rs  earth.rs  instance_pipeline.rs  instancetest.rs  lib.rs  mapupdate.rs  old.rs  scene.rs  sun.rs  tools.rs  trackball_camera.rs
