[package]
name = "htmlpacker"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
brotli = "7.0.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
maud = "*"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.28", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
#wasm-bindgen = "0.2.100"
#base94 = "0.3.0"

[profile.release]
opt-level = 3

# wasm support
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen = "0.2.100"
#web-sys = { version = "0.3", features = [
#    "Document",
#    "Element",
#    "HtmlElement",
#    "Window",
#    "console",
#    "CssStyleDeclaration",
#]}
#js-sys = "0.3"
#rand = { version = "0.8", features = ["small_rng"] }
#getrandom = { version = "0.2", features = ["js"] }
#

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen = "0.2.100"
#
#[lib]
#crate-type = ["rlib"]
