[package]
name = "wasm_decoder"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
base64 = "0.22.1"
brotli = "7.0.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
#base94 = "0.3.0"

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ["-O1"]
#wasm-opt = false
wasm-opt = ["-O3", "--enable-mutable-globals"]
#lto = true
