[package]
name = "wasm_modules"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_modules"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
base64 = "0.22.1"
brotli = "7.0.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
iyes_perf_ui = "0.4.0"
bevy_mini_fps = "0.1.0"
#rand = "0.9.0"
#getrandom = { version = "0.3.2", features = ["wasm_js"] }

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "bevy_winit",      # Window handling
    "bevy_render",     # Rendering system
    "bevy_core_pipeline", # Core rendering pipeline
    "bevy_pbr",        # 3D rendering
    "bevy_sprite",     # 2D support
    "bevy_text",       # Text rendering
    "bevy_ui",         # UI system
    "webgl2",          # WebGL2 support (crucial for web)
    #"png",             # Image support
    "animation",
    "tonemapping_luts",
    "default_font",
    #"iyes_perf_ui"
    #"diagnostic"
]

[dependencies.web-sys]
version = "0.3.77"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'Performance',
    'WheelEvent',
    'KeyboardEvent',
    'MouseEvent',
    'CssStyleDeclaration',
]

# These optimizations are important for WASM
#[profile.dev]
#opt-level = 1
#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# not sure why wasm-opt O3 and O2 are not working
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--optimize-level=3", "--shrink-level=2"]
#wasm-opt = ["-O1"]
#wasm-opt = false
#wasm-opt = ["-O3", "--enable-mutable-globals"]


